@startuml

title __APP's Class Diagram__\n

  namespace da.au_grp21.bluetoothdevelopmentdebugtool {
    namespace Bluetooth {
      class da.au_grp21.bluetoothdevelopmentdebugtool.Bluetooth.BluetoothConnectionService {
      }
    }
  }
  

  namespace da.au_grp21.bluetoothdevelopmentdebugtool {
    class da.au_grp21.bluetoothdevelopmentdebugtool.BuildConfig {
    }
  }
  

  namespace da.au_grp21.bluetoothdevelopmentdebugtool {
    namespace Database {
      class da.au_grp21.bluetoothdevelopmentdebugtool.Database.DatabaseService {
      }
    }
  }
  

  namespace da.au_grp21.bluetoothdevelopmentdebugtool {
    namespace Database {
      class da.au_grp21.bluetoothdevelopmentdebugtool.Database.LogData {
      }
    }
  }
  

  namespace da.au_grp21.bluetoothdevelopmentdebugtool {
    namespace Database {
      class da.au_grp21.bluetoothdevelopmentdebugtool.Database.LogListAdapter {
      }
    }
  }
  

  namespace da.au_grp21.bluetoothdevelopmentdebugtool {
    namespace Device {
      class da.au_grp21.bluetoothdevelopmentdebugtool.Device.Device {
      }
    }
  }
  

  namespace da.au_grp21.bluetoothdevelopmentdebugtool {
    namespace Device {
      class da.au_grp21.bluetoothdevelopmentdebugtool.Device.DeviceListAdapter {
      }
    }
  }
  

  namespace da.au_grp21.bluetoothdevelopmentdebugtool {
    namespace Fragment {
      class da.au_grp21.bluetoothdevelopmentdebugtool.Fragment.FragmentConnection {
      }
    }
  }
  

  namespace da.au_grp21.bluetoothdevelopmentdebugtool {
    namespace Fragment {
      class da.au_grp21.bluetoothdevelopmentdebugtool.Fragment.FragmentHelp {
      }
    }
  }
  

  namespace da.au_grp21.bluetoothdevelopmentdebugtool {
    namespace Fragment {
      class da.au_grp21.bluetoothdevelopmentdebugtool.Fragment.FragmentLoad {
      }
    }
  }
  

  namespace da.au_grp21.bluetoothdevelopmentdebugtool {
    namespace Fragment {
      class da.au_grp21.bluetoothdevelopmentdebugtool.Fragment.FragmentMain {
      }
    }
  }
  

  namespace da.au_grp21.bluetoothdevelopmentdebugtool {
    namespace Fragment {
      class da.au_grp21.bluetoothdevelopmentdebugtool.Fragment.FragmentNotSaved {
      }
    }
  }
  

  namespace da.au_grp21.bluetoothdevelopmentdebugtool {
    namespace Fragment {
      class da.au_grp21.bluetoothdevelopmentdebugtool.Fragment.FragmentSaveOutput {
      }
    }
  }
  

  namespace da.au_grp21.bluetoothdevelopmentdebugtool {
    namespace Fragment {
      class da.au_grp21.bluetoothdevelopmentdebugtool.Fragment.FragmentTerminalScr {
      }
    }
  }
  

  namespace da.au_grp21.bluetoothdevelopmentdebugtool {
    class da.au_grp21.bluetoothdevelopmentdebugtool.MainActivity {
    }
  }
  

  namespace da.au_grp21.bluetoothdevelopmentdebugtool {
    namespace ViewModel {
      class da.au_grp21.bluetoothdevelopmentdebugtool.ViewModel.MyViewModel {
      }
    }
  }
  

  da.au_grp21.bluetoothdevelopmentdebugtool.Bluetooth.BluetoothConnectionService -up-|> android.app.Service
  da.au_grp21.bluetoothdevelopmentdebugtool.Database.DatabaseService -up-|> android.app.IntentService
  da.au_grp21.bluetoothdevelopmentdebugtool.Database.LogData .up.|> java.io.Serializable
  da.au_grp21.bluetoothdevelopmentdebugtool.Database.LogListAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  da.au_grp21.bluetoothdevelopmentdebugtool.Database.LogListAdapter o-- da.au_grp21.bluetoothdevelopmentdebugtool.Database.LogListAdapter.OnItemClickListener : clickListener
  da.au_grp21.bluetoothdevelopmentdebugtool.Database.LogListAdapter o-- da.au_grp21.bluetoothdevelopmentdebugtool.Database.LogListAdapter.OnItemLongClickListner : longClickListner
  da.au_grp21.bluetoothdevelopmentdebugtool.Device.DeviceListAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  da.au_grp21.bluetoothdevelopmentdebugtool.Device.DeviceListAdapter o-- da.au_grp21.bluetoothdevelopmentdebugtool.Device.DeviceListAdapter.OnItemClickListener : clickListener
  da.au_grp21.bluetoothdevelopmentdebugtool.Device.DeviceListAdapter o-- da.au_grp21.bluetoothdevelopmentdebugtool.Device.DeviceListAdapter.OnItemLongClickListner : longClickListner
  da.au_grp21.bluetoothdevelopmentdebugtool.Fragment.FragmentConnection -up-|> androidx.fragment.app.Fragment
  da.au_grp21.bluetoothdevelopmentdebugtool.Fragment.FragmentConnection o-- da.au_grp21.bluetoothdevelopmentdebugtool.Device.DeviceListAdapter : myAdapter
  da.au_grp21.bluetoothdevelopmentdebugtool.Fragment.FragmentConnection o-- da.au_grp21.bluetoothdevelopmentdebugtool.ViewModel.MyViewModel : vm
  da.au_grp21.bluetoothdevelopmentdebugtool.Fragment.FragmentHelp -up-|> androidx.fragment.app.Fragment
  da.au_grp21.bluetoothdevelopmentdebugtool.Fragment.FragmentHelp o-- da.au_grp21.bluetoothdevelopmentdebugtool.ViewModel.MyViewModel : vm
  da.au_grp21.bluetoothdevelopmentdebugtool.Fragment.FragmentLoad -up-|> androidx.fragment.app.Fragment
  da.au_grp21.bluetoothdevelopmentdebugtool.Fragment.FragmentLoad o-- da.au_grp21.bluetoothdevelopmentdebugtool.Database.LogListAdapter : myAdapter
  da.au_grp21.bluetoothdevelopmentdebugtool.Fragment.FragmentLoad o-- da.au_grp21.bluetoothdevelopmentdebugtool.ViewModel.MyViewModel : vm
  da.au_grp21.bluetoothdevelopmentdebugtool.Fragment.FragmentMain -up-|> androidx.fragment.app.Fragment
  da.au_grp21.bluetoothdevelopmentdebugtool.Fragment.FragmentMain o-- da.au_grp21.bluetoothdevelopmentdebugtool.ViewModel.MyViewModel : vm
  da.au_grp21.bluetoothdevelopmentdebugtool.Fragment.FragmentNotSaved -up-|> androidx.fragment.app.Fragment
  da.au_grp21.bluetoothdevelopmentdebugtool.Fragment.FragmentNotSaved o-- da.au_grp21.bluetoothdevelopmentdebugtool.ViewModel.MyViewModel : vm
  da.au_grp21.bluetoothdevelopmentdebugtool.Fragment.FragmentSaveOutput -up-|> androidx.fragment.app.Fragment
  da.au_grp21.bluetoothdevelopmentdebugtool.Fragment.FragmentSaveOutput o-- da.au_grp21.bluetoothdevelopmentdebugtool.ViewModel.MyViewModel : vm
  da.au_grp21.bluetoothdevelopmentdebugtool.Fragment.FragmentTerminalScr -up-|> androidx.fragment.app.Fragment
  da.au_grp21.bluetoothdevelopmentdebugtool.Fragment.FragmentTerminalScr o-- da.au_grp21.bluetoothdevelopmentdebugtool.ViewModel.MyViewModel : vm
  da.au_grp21.bluetoothdevelopmentdebugtool.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  da.au_grp21.bluetoothdevelopmentdebugtool.MainActivity o-- da.au_grp21.bluetoothdevelopmentdebugtool.ViewModel.MyViewModel : vm
  da.au_grp21.bluetoothdevelopmentdebugtool.ViewModel.MyViewModel -up-|> androidx.lifecycle.ViewModel
  da.au_grp21.bluetoothdevelopmentdebugtool.ViewModel.MyViewModel o-- da.au_grp21.bluetoothdevelopmentdebugtool.Bluetooth.BluetoothConnectionService : service
  da.au_grp21.bluetoothdevelopmentdebugtool.ViewModel.MyViewModel o-- da.au_grp21.bluetoothdevelopmentdebugtool.Database.LogData : chosenLog
  da.au_grp21.bluetoothdevelopmentdebugtool.ViewModel.MyViewModel o-- da.au_grp21.bluetoothdevelopmentdebugtool.Device.Device : currentDevice


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
